--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encording: unicode
+  pool: 5
+  database: task-list_production
+  username: task-list
+  password: <%= ENV['TASK-LIST_DATABASE_PASSWORD'] %>
